--- a/src/app/products/product-list/product-list.component.scss
+++ b/src/app/products/product-list/product-list.component.scss
@@ -22,3 +22,10 @@
   grid-template-columns: repeat(2, 100px);
   grid-gap: 20px;
 }
+
+.filters{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  align-items: center;
+}
