--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,5 +1,4 @@
-<mat-card>
-  <mat-card-content>
+
     <form [formGroup]="filterForm" class="filters">
       <mat-form-field appearance="outline">
         <mat-label>Search products</mat-label>
@@ -11,7 +10,7 @@
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
+<!--       <mat-form-field appearance="outline">
         <mat-label>Expiration before</mat-label>
         <input
           matInput
@@ -20,7 +19,7 @@
         >
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+      </mat-form-field> -->
 
     </form>
     <mat-slide-toggle
@@ -30,13 +29,11 @@
         (change)="toggleDateFilter()"
         color="primary"
       >
-        Expiration Date 
+      filter expired products 
       </mat-slide-toggle>
-  </mat-card-content>
-</mat-card>
 <div class="products">
 
-  @for (product of products; track product.name) {
+  @for (product of filteredProducts; track product.name) {
 
     <mat-card class="example-card" appearance="outlined">
       <mat-card-header>
